Its about time we came out of beta, its only been 4 years

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 h1 a {
-	background: url('../images/logo_beta.png') no-repeat top left;
+	background: url('../images/logo.png') no-repeat top left;
 	position: absolute;
 	text-indent: 100%;
 	white-space: nowrap;
